--- a/quickpossecure/appsettings.json
+++ b/quickpossecure/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=quickpos;user=root;password="
+    "DefaultConnection": "server=localhost;port=3306;database=quickpos;user=root;password=brk@1234"
     //"DefaultConnection": "Server=MYSQL5012.site4now.net;Database=db_a3b6ec_pos;Uid=a3b6ec_pos;Pwd=capital_6891"
   },
   "Logging": {
